gst pipewiresrc has major delay compared to v4l2src on some cameras
This might be a duplicate of #30 (closed) and is frequently seen with Gnome apps making use of pipewiresrc
but does not occur when using PW directly (with e.g. https://gitlab.gnome.org/GNOME/pipewire-media-stream).
STR: compare
gst-launch-1.0 pipewiresrc ! image/jpeg,width=1280,height=720 ! decodebin3 ! videoconvert ! gtksink
with
gst-launch-1.0 v4l2src ! image/jpeg,width=1280,height=720 ! decodebin3 ! videoconvert ! gtksink
If somebody knows what's the issue already (e.g. #30 (closed)) I can give it a go and try fixing things.